add tablet header

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="container">
                 <div class="header-wrap">
-                    <div class="logo">
+                    <div class="logo logo--header">
                         <a href="#"><img src="./img/icons/logo.svg" alt="logo"></a>
                     </div>
                     <!-- <nav class="header__nav">
@@ -80,7 +80,7 @@
                             <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
                         </div>
                     </div>
-                    <a href="" class="btn connection-info__btn">Apply online</a>
+                    <a href="" class="btn connection-info__btn connection-info__btn--red">Apply online</a>
                     <!-- <ul class="social-links-list social-links-list--mobile">
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
                                     class="social-links-icon" src="./img//icons/whatsapp 2.svg" alt=""></a></li>
@@ -142,21 +142,21 @@
             <div class="adaptive-menu">
                 <div class="connection-info__item">
                     <div class="navigation-item ">
-                        <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone" width="20"
-                            height="20">
+                        <img src="./img/icons/icon_smartphone_top_header.svg" class="navigation-item__icon" alt="phone"
+                            width="21" height="21">
 
                         <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
 
                     </div>
                     <div class="navigation-item ">
-                        <img src="./img/icons/phone icon.svg" class="navigation-item__icon" width="20" height="20"
-                            alt="phone">
+                        <img src="./img/icons/icon_smartphone_top_header.svg" class="navigation-item__icon" width="21"
+                            height="21" alt="phone">
                         <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
                     </div>
 
                     <div class="navigation-item navigation-item--email">
-                        <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon" width="16"
-                            height="16">
+                        <img src="./img/icons/email-header-tablet.png" alt="mail" class="navigation-item__icon"
+                            width="16" height="16">
                         <a class="navigation-item__link"
                             href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
                     </div>
@@ -164,13 +164,13 @@
                 </div>
                 <ul class="social-links-list">
                     <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
-                                class="social-links-icon" src="./img//icons/whatsapp 2.svg" alt=""></a></li>
+                                class="social-links-icon" src="./img//icons/whatsappblue.svg" alt=""></a></li>
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/menu instagram.svg" alt=""></a></li>
+                                src="./img//icons/instagram-sketched blue.svg" alt=""></a></li>
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/menu linkedn.svg" alt=""></a></li>
+                                src="./img//icons/linkedin blue.svg" alt=""></a></li>
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/menu facebook.svg" alt=""></a></li>
+                                src="./img//icons/facebook blue.svg" alt=""></a></li>
                 </ul>
                 <p class="adaptive-menu__info">
                     Edugain in Ukranian рлвмвпмлоиыб мсрмосмыо свы сырвмсорывмсормыворсмыовмсывмосмыо and Russian
