--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 
                     </div>
                     <ul class="social-links-list">
+                        <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
+                                    class="social-links-icon" src="./img//icons/whatsappblue.svg" alt=""></a></li>
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
-                                    class="social-links-icon" src="./img//icons/whatsapp 2.svg" alt=""></a></li>
+                                    class="social-links-icon" src="./img//icons/instagram-sketched blue.svg" alt=""></a>
+                        </li>
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
-                                    class="social-links-icon" src="./img//icons/menu instagram.svg" alt=""></a></li>
+                                    class="social-links-icon" src="./img//icons/linkedin blue.svg" alt=""></a></li>
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
-                                    class="social-links-icon" src="./img//icons/menu linkedn.svg" alt=""></a></li>
-                        <li class="social-links-item"><a href="#" class="social-links-link"><img
-                                    class="social-links-icon" src="./img//icons/menu facebook.svg" alt=""></a></li>
+                                    class="social-links-icon" src="./img//icons/facebook blue.svg" alt=""></a></li>
                     </ul>
-
                 </div>
             </div>
             <div class="container">
@@ -80,7 +80,7 @@
                             <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
                         </div>
                     </div>
-                    <a href="" class="btn connection-info__btn connection-info__btn--red">Apply online</a>
+                    <a href="#" class="btn connection-info__btn connection-info__btn--red">Apply online</a>
                     <!-- <ul class="social-links-list social-links-list--mobile">
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
                                     class="social-links-icon" src="./img//icons/whatsapp 2.svg" alt=""></a></li>
@@ -90,6 +90,17 @@
                                     class="social-links-icon" src="./img//icons/menu linkedn.svg" alt=""></a></li>
                         <li class="social-links-item"><a href="#" class="social-links-link"><img
                                     class="social-links-icon" src="./img//icons/menu facebook.svg" alt=""></a></li>
+                    </ul> -->
+                    <!-- <ul class="social-links-list">
+                        <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
+                                    class="social-links-icon" src="./img//icons/whatsappblue.svg" alt=""></a></li>
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/instagram-sketched blue.svg" alt=""></a>
+                        </li>
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/linkedin blue.svg" alt=""></a></li>
+                        <li class="social-links-item"><a href="#" class="social-links-link"><img
+                                    class="social-links-icon" src="./img//icons/facebook blue.svg" alt=""></a></li>
                     </ul> -->
                     <div id="menu"><img src="./img/icons/menu.svg" alt="menu"></div>
                 </div>
