add header decorate elements

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
         </div> -->
         <div class="adaptive-menu">
-            <div class="connection-info__item">
+            <div class="connection-info__item connection-info__item--tablet">
                 <div class="navigation-item ">
                     <img src="./img/icons/icon_smartphone_top_header.svg" class="navigation-item__icon" alt="phone"
                         width="21" height="21">
@@ -310,6 +310,8 @@
             <div class="rectangle-decorate__inner"></div>
             <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
         </div>
+
+
         <div class="container">
             <div class="header-slider__content">
                 <div class="connection-info">
@@ -478,7 +480,15 @@
     </div>
     <section class="universities">
 
+        <div class="rectangle-decorate-block">
+            <img class="rectangle-decorate-block__arr-transparent" src="./img/icons/arr-decorateTranspatent.svg" alt="">
+            <img class="rectangle-decorate-block__arr-white" src="./img/icons/arr-decorateWhiteOpacity.svg" alt="">
+            <div class="rectangle-decorate-block__red">
 
+
+            </div>
+            <div class="rectangle-decorate-block__transparent"></div>
+        </div>
         <div class="square-decorate"></div>
         <div class="square-decorate square-decorate--transparent"></div>
         <div class="container">
