--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                                 src="./img//icons/facebook blue.svg" alt=""></a></li>
                 </ul> -->
                 <div id="menu"><img src="./img/icons/menu.svg" alt="menu"></div>
+                <a href="#"
+                    class="btn connection-info__btn connection-info__btn--red connection-info__btn--sticky">Apply
+                    online</a>
+
             </div>
         </div>
 
@@ -334,17 +338,16 @@
                             <input type="text" placeholder="serch..." class="search__input">
                             <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
                         </div>
-                        <a href="" class="btn connection-info__btn">Apply online</a>
+                        <a href="#" class="btn connection-info__btn">Apply online</a>
                     </div>
                 </div>
                 <div class="header-slider__block">
                     <h1 class="header-slider__mail-title js-title">Business</h1>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
-                        <h2 class="header-slider__subtitle">Edugain in Ukranian
-                            <span class="header-subtitle-decorate">and Russian</span> </h2>
+                        <h2 class="header-slider__subtitle">Education in Russian
+                            <span class="header-subtitle-decorate">or Ukrainian medium</span> </h2>
                     </div>
-
                     <p class="header-slider__info js-info">
                         The best thing about studying MBBS in Russia that there is no entrance test for admission in
                         Russian
@@ -354,13 +357,21 @@
                 </div>
                 <nav class="header-slider__nav">
                     <ul class="header-slider__nav-list">
-                        <li class="header-slider__nav-item header-slider__nav-item--active"><span
+                        <li class="header-slider__nav-item header-slider__nav-item--active"><img
+                                class="header-slider__nav-icon" src="./img/icons/doctor.svg" alt=""><span
                                 class="header-slider__nav-num">01</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">02</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">03</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">04</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span></li>
-                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">06</span></li>
+                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                                src="./img/icons/money.svg" alt=""><span class="header-slider__nav-num">02</span></li>
+                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                                src="./img/icons/computer.svg" alt=""><span class="header-slider__nav-num">03</span>
+                        </li>
+                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                                src="./img/icons/enginiring.svg" alt=""><span class="header-slider__nav-num">04</span>
+                        </li>
+                        <li class="header-slider__nav-item"><span class="header-slider__nav-num">05</span><img
+                                class="header-slider__nav-icon" src="./img/icons/aviation.svg" alt=""></li>
+                        <li class="header-slider__nav-item"><img class="header-slider__nav-icon"
+                                src="./img/icons/others.svg" alt=""><span class="header-slider__nav-num">06</span></li>
                     </ul>
 
                     <div class="header-slider__buttons">
@@ -371,6 +382,14 @@
 
                     </div>
                 </nav>
+                <!-- <nav class="header-slider__mobile-nav">
+                    <ul class="header-slider__mobile-nav_list">
+                        <li class="header-slider__mobile-nav-item">
+                           
+                            <span class="header-slider__mobile-nav"></span>
+                        </li>
+                    </ul>
+                </nav> -->
                 <nav class="social-nav">
                     <ul class="social-nav__list">
                         <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
@@ -1165,7 +1184,7 @@
                     <h4 class="footer-item__subtitle">How to obtain visa</h4>
                     <h4 class="footer-item__subtitle">Apply online</h4>
                 </div>
-                <div class="footer-item">
+                <div class="footer-item footer-item--contact">
                     <h3 class="footer-item__title">Contact us</h3>
                     <h4 class="footer-item__subtitle">For Admissions:</h4>
                     <a href="" class="footer-item__link"> WhatsApp/Viber: +380 63 790 92 94
