--- a/index.html
+++ b/index.html
@@ -1056,24 +1056,24 @@
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
                             <img src="./img/photo/feedback-img.png" alt="feedback" class="feedback-item__img">
-                            <div class="feedback-item__info">
-                                <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
-                                <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
-                                <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
-                                    much,
-                                    especially Ms. Ekateryna, who has been there for me during the whole application
-                                    period.
-                                    I
-                                    received the Invitation Letter and the study visa last summer, and I am currently on
-                                    my
-                                    second year studying International Law at Chechen State University. Local people and
-                                    other
-                                    students are nice and friendly, the cuisine is delicious, and there are actually
-                                    many
-                                    places
-                                    to visit in Grozny! Thank you once again!</p>
-                            </div>
+                            <!-- <div class="feedback-item__info"> -->
+                            <h3 class="feedback-item__title">Panashe Phiri, Zimbabwe</h3>
+                            <h6 class="feedback-item__subtitle">A student of Chechen State University</h6>
+                            <p class="feedback-item__text">I would like to thank Edugain Overseas representatives so
+                                much,
+                                especially Ms. Ekateryna, who has been there for me during the whole application
+                                period.
+                                I
+                                received the Invitation Letter and the study visa last summer, and I am currently on
+                                my
+                                second year studying International Law at Chechen State University. Local people and
+                                other
+                                students are nice and friendly, the cuisine is delicious, and there are actually
+                                many
+                                places
+                                to visit in Grozny! Thank you once again!</p>
                         </div>
+                        <!-- </div> -->
                     </div>
                     <div class="feedback-item">
                         <div class="feedback-item__inner">
@@ -1144,7 +1144,7 @@
                 </div>
             </div>
     </section>
-    <a href="#header" class="upBtn">
+    <a href="#" class="upBtn">
         <img src="img/icons/arrow_up.svg" alt="up" class="upArrow">
     </a>
     <footer class="footer">
@@ -1177,12 +1177,22 @@
                     </p>
                 </div>
                 <div class="footer-item">
-                    <h3 class="footer-item__title">Quick Navigation</h3>
+                    <ul>
+                        <li>
+                            <h3 class="footer-item__title">Quick Navigation</h3>
+                        </li>
+                        <li><a class="footer-item__subtitle" href="#">Courses</a></li>
+                        <li><a class="footer-item__subtitle" href="#">Universities</a></li>
+                        <li><a class="footer-item__subtitle" href="#">Admission process</a></li>
+                        <li><a class="footer-item__subtitle" href="#">How to obtain visa</a></li>
+                        <li><a class="footer-item__subtitle" href="#">Apply online</a></li>
+                    </ul>
+                    <!-- <h3 class="footer-item__title">Quick Navigation</h3>
                     <h4 class="footer-item__subtitle">Courses</h4>
                     <h4 class="footer-item__subtitle">Universities</h4>
                     <h4 class="footer-item__subtitle">Admission process</h4>
                     <h4 class="footer-item__subtitle">How to obtain visa</h4>
-                    <h4 class="footer-item__subtitle">Apply online</h4>
+                    <h4 class="footer-item__subtitle">Apply online</h4> -->
                 </div>
                 <div class="footer-item footer-item--contact">
                     <h3 class="footer-item__title">Contact us</h3>
@@ -1201,6 +1211,7 @@
                     </a>
                 </div>
             </div>
+            <!-- <div class="footer-contact"></div> -->
         </div>
         <div class="copiright">© Prime Network Copyright. All Rights Reserved.</div>
     </footer>
