adaptive header-mobile

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                         <li class="header__item"><a href="#" class="header__link">HOME</a>
                             <div class="hover-items">
                                 <ul class="hover-items__list">
-                                    <li class="subitem"><a class="subitem-link" href=""><img class="subitem-icon"
+                                    <li class="subitem"><a class="subitem-link" href="#"><img class="subitem-icon"
                                                 src="./img/icons/exam 1.svg" alt=""><span>About Edugain
                                                 Overseas</span></a></li>
-                                    <li class="subitem"><a class="subitem-link" href=""><img class="subitem-icon"
+                                    <li class="subitem"><a class="subitem-link" href="#"><img class="subitem-icon"
                                                 src="./img/icons/exam 1.svg" alt="">About Edugain Overseas</a></li>
-                                    <li class="subitem"><a class="subitem-link" href=""><img class="subitem-icon"
+                                    <li class="subitem"><a class="subitem-link" href="#"><img class="subitem-icon"
                                                 src="./img/icons/exam 1.svg" alt="">About Edugain Overseas</a></li>
                                 </ul>
                             </div>
@@ -98,16 +98,16 @@
                 <a href="#"
                     class="btn connection-info__btn connection-info__btn--red connection-info__btn--tablet">Apply
                     online</a>
-                <!-- <ul class="social-links-list social-links-list--mobile">
+                <ul class="social-links-list social-links-list--mobile">
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/whatsapp 2.svg" alt=""></a></li>
+                                src="./img//icons/whatsapp blue.svg" alt=""></a></li>
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/menu instagram.svg" alt=""></a></li>
+                                src="./img//icons/instagram-sketched blue.svg" alt=""></a></li>
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/menu linkedn.svg" alt=""></a></li>
+                                src="./img//icons/linkedin blue.svg" alt=""></a></li>
                     <li class="social-links-item"><a href="#" class="social-links-link"><img class="social-links-icon"
-                                src="./img//icons/menu facebook.svg" alt=""></a></li>
-                </ul> -->
+                                src="./img//icons/facebook blue.svg" alt=""></a></li>
+                </ul>
                 <!-- <ul class="social-links-list">
                     <li class="social-links-item"><a href="#" class="social-links-link social-links-list--menu"><img
                                 class="social-links-icon" src="./img//icons/whatsappblue.svg" alt=""></a></li>
@@ -205,7 +205,7 @@
                             src="./img//icons/facebook blue.svg" alt=""></a></li>
             </ul>
             <p class="adaptive-menu__info">
-                Edugain in Ukranian рлвмвпмлоиыб мсрмосмыо свы сырвмсорывмсормыворсмыовмсывмосмыо and Russian
+                Edugain in Ukranian рлв мвпмлоиыб мсрмосмыо свы сырвмсорывмс ормыворсм ыовмсы вмосмыо and Russian
             </p>
             <nav class="navigation-menu">
                 <h3 class="navigation-menu__title">
