--- a/index.html
+++ b/index.html
@@ -172,22 +172,22 @@
             </div>
         </div> -->
         <div class="adaptive-menu">
-            <div class="connection-info__item connection-info__item--tablet">
+            <div class="connection-info__item connection-info__item--tablet connection-info__item--menu">
                 <div class="navigation-item ">
-                    <img src="./img/icons/icon_smartphone_top_header.svg" class="navigation-item__icon" alt="phone"
-                        width="21" height="21">
+                    <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone" width="21"
+                        height="21">
 
                     <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
 
                 </div>
                 <div class="navigation-item ">
-                    <img src="./img/icons/icon_smartphone_top_header.svg" class="navigation-item__icon" width="21"
-                        height="21" alt="phone">
+                    <img src="./img/icons/phone icon.svg" class="navigation-item__icon" width="21" height="21"
+                        alt="phone">
                     <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
                 </div>
 
                 <div class="navigation-item navigation-item--email">
-                    <img src="./img/icons/email-header-tablet.png" alt="mail" class="navigation-item__icon" width="16"
+                    <img src="./img/icons/mail icon.svg" alt="mail" class="navigation-item__icon" width="16"
                         height="16">
                     <a class="navigation-item__link"
                         href="mailto:admissions@edugainoverseas.com">admissions@edugainoverseas.com</a>
@@ -281,13 +281,15 @@
                     </details>
                 </div>
             </nav>
-            <div class="connection-info__item">
+            <div class="connection-info__item connection-info__item--menu">
                 <div class="search">
                     <input type="text" placeholder="serch..." class="search__input">
-                    <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
+                    <button class="search__btn search__btn--menu"><img src="./img/icons/icon_search--blue.svg"
+                            alt="search"></button>
                 </div>
             </div>
-            <a href="" class="btn connection-info__btn">Apply online</a>
+            <a href="" class="btn connection-info__btn connection-info__btn--red connection-info__btn--menu">Apply
+                online</a>
 
         </div>
     </header>
