--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <script src="https://kit.fontawesome.com/3128641a4f.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;0,700;1,500;1,700&display=swap"
         rel="stylesheet">
-    <link
+    <!-- <link
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400&family=Roboto:ital,wght@0,500;0,700;1,500;1,700&display=swap"
-        rel="stylesheet">
+        rel="stylesheet"> -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css//media.css">
     <title>Document</title>
@@ -91,7 +91,7 @@
                 </nav>
                 <div class="connection-info__item connection-info__item--tablet">
                     <div class="search">
-                        <input type="text" placeholder="serch..." class="search__input">
+                        <input type="text" placeholder="search..." class="search__input">
                         <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
                     </div>
                 </div>
@@ -283,7 +283,7 @@
             </nav>
             <div class="connection-info__item connection-info__item--menu">
                 <div class="search">
-                    <input type="text" placeholder="serch..." class="search__input">
+                    <input type="text" placeholder="search..." class="search__input">
                     <button class="search__btn search__btn--menu"><img src="./img/icons/icon_search--blue.svg"
                             alt="search"></button>
                 </div>
@@ -297,6 +297,29 @@
         <img src="./img//icons/arrow-decorate.svg" alt="" class="arrow-decorate">
         <img src="./img//icons/arrow-decorate.svg" width="216" height="322" alt=""
             class="arrow-decorate arrow-decorate--right">
+
+        <nav class="social-nav">
+            <ul class="social-nav__list">
+                <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/envelope.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/whatsUp.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/vider.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/telegram.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/instagram.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/linked-in.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/facebook.svg"
+                            alt=""></a></li>
+                <li class="social-nav__item"><a href="#" class="social-nav__link"><img src="./img/icons/youtube.svg"
+                            alt=""></a></li>
+
+            </ul>
+        </nav>
         <!-- jquery slider try -->
 
         <!-- <div class="header-slider-wrap">
@@ -325,8 +348,10 @@
                         <div class="navigation-item navigation-item--phones">
                             <img src="./img/icons/phone icon.svg" class="navigation-item__icon" alt="phone">
                             <div class="navigation-item__inner">
-                                <a href="tel:+380637909294" class="navigation-item__link">+38 (063) 790-92-94</a>
-                                <a href="tel:+79092077688" class="navigation-item__link">+7 (909) 207-76-88</a>
+                                <a href="tel:+380637909294"
+                                    class="navigation-item__link navigation-item__link--uk-num">+38 (063) 790-92-94</a>
+                                <a href="tel:+79092077688"
+                                    class="navigation-item__link navigation-item__link--rus-num">+7 (909) 207-76-88</a>
                             </div>
                         </div>
                         <div class="navigation-item navigation-item--email">
@@ -337,14 +362,15 @@
                     </div>
                     <div class="connection-info__item">
                         <div class="search">
-                            <input type="text" placeholder="serch..." class="search__input">
+                            <input type="text" placeholder="search..." class="search__input">
                             <button class="search__btn"><img src="./img/icons/icon_search.svg" alt="search"></button>
                         </div>
-                        <a href="#" class="btn connection-info__btn">Apply online</a>
+                        <a href="#" class="btn connection-info__btn btn--header">Apply online</a>
                     </div>
                 </div>
                 <div class="header-slider__block">
                     <h1 class="header-slider__mail-title js-title">Business</h1>
+                    <h4 class="header-slider__assistant-subtitle">CourseS</h4>
                     <div class="subtitle-wrap">
                         <img src="./img/photo/dots.svg" alt="" class="dots-img">
                         <h2 class="header-slider__subtitle">Education in Russian
@@ -392,28 +418,7 @@
                         </li>
                     </ul>
                 </nav> -->
-                <nav class="social-nav">
-                    <ul class="social-nav__list">
-                        <div class="social-nav__main"><img src="img/icons//whatsapp 1.svg" alt=""></div>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/envelope.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/whatsUp.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/vider.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/telegram.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/instagram.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/linked-in.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/facebook.svg" alt=""></a></li>
-                        <li class="social-nav__item"><a href="#" class="social-nav__link"><img
-                                    src="./img/icons/youtube.svg" alt=""></a></li>
 
-                    </ul>
-                </nav>
             </div>
             <!-- </div> -->
         </div>
@@ -528,6 +533,62 @@
             </div>
         </div>
         <div class="slider-wrap universities__slider">
+            <div class="slider-item js-slider-item-universities slider-item--test">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities slider-item--test">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <!-- <div class="slider-item js-slider-item-universities slider-item--test">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div> -->
+            <!-- <div class="slider-item js-slider-item-universities slider-item--test">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div> -->
             <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
@@ -570,7 +631,7 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
+            <div class="slider-item js-slider-item-universities ">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
