add header-assistent slider animation

--- a/index.html
+++ b/index.html
@@ -404,19 +404,19 @@
 
                     <div class="header-slider__buttons">
                         <button class="slider-header-btn js-header-slide-prev"><img src="./img/icons/btn-prev.svg"
-                                alt=""></button>
+                                alt="" width="35" height="35"></button>
                         <button class="slider-header-btn js-header-slide-next"><img src="./img/icons/next-btn.svg"
-                                alt=""></button>
+                                alt="" width="35" height="35"></button>
 
                     </div>
                 </nav>
-                <!-- <nav class="header-slider__mobile-nav">
-                    <ul class="header-slider__mobile-nav_list">
-                        <li class="header-slider__mobile-nav-item">
-                           
-                            <span class="header-slider__mobile-nav"></span>
-                        </li>
-                    </ul>
+                <!-- <nav class=" header-slider__mobile-nav">
+                            <ul class="header-slider__mobile-nav_list">
+                                <li class="header-slider__mobile-nav-item">
+
+                                    <span class="header-slider__mobile-nav"></span>
+                                </li>
+                            </ul>
                 </nav> -->
 
             </div>
