fix buttons size

--- a/index.html
+++ b/index.html
@@ -533,62 +533,9 @@
             </div>
         </div>
         <div class="slider-wrap universities__slider">
-            <div class="slider-item js-slider-item-universities slider-item--test">
-                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
-                <div class="slider-item__content">
-                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
-                    <div class="line line--slide-item">
-                        <span class="line-circle line-circle--slide-item"></span>
-                    </div>
-                    <p class="slider-item__info">
-                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
-                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
-                    </p>
-                    <a href="#" class="btn slider-item__btn">More Details</a>
-                </div>
-            </div>
-            <div class="slider-item js-slider-item-universities slider-item--test">
-                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
-                <div class="slider-item__content">
-                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
-                    <div class="line line--slide-item">
-                        <span class="line-circle line-circle--slide-item"></span>
-                    </div>
-                    <p class="slider-item__info">
-                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
-                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
-                    </p>
-                    <a href="#" class="btn slider-item__btn">More Details</a>
-                </div>
-            </div>
-            <!-- <div class="slider-item js-slider-item-universities slider-item--test">
-                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
-                <div class="slider-item__content">
-                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
-                    <div class="line line--slide-item">
-                        <span class="line-circle line-circle--slide-item"></span>
-                    </div>
-                    <p class="slider-item__info">
-                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
-                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
-                    </p>
-                    <a href="#" class="btn slider-item__btn">More Details</a>
-                </div>
-            </div> -->
-            <!-- <div class="slider-item js-slider-item-universities slider-item--test">
-                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
-                <div class="slider-item__content">
-                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
-                    <div class="line line--slide-item">
-                        <span class="line-circle line-circle--slide-item"></span>
-                    </div>
-                    <p class="slider-item__info">
-                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
-                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
-                    </p>
-                    <a href="#" class="btn slider-item__btn">More Details</a>
-                </div>
-            </div> -->
+
+
+
             <div class="slider-item js-slider-item-universities">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
@@ -618,6 +565,20 @@
                 </div>
             </div>
             <div class="slider-item js-slider-item-universities">
+                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
+                <div class="slider-item__content">
+                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
+                    <div class="line line--slide-item">
+                        <span class="line-circle line-circle--slide-item"></span>
+                    </div>
+                    <p class="slider-item__info">
+                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
+                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
+                    </p>
+                    <a href="#" class="btn slider-item__btn">More Details</a>
+                </div>
+            </div>
+            <div class="slider-item js-slider-item-universities ">
                 <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
                 <div class="slider-item__content">
                     <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
@@ -701,35 +662,11 @@
                     <a href="#" class="btn slider-item__btn">More Details</a>
                 </div>
             </div>
-            <div class="slider-item js-slider-item-universities">
-                <img src="./img/photo/kai 1.png" alt="slide" class="slider-item__photo">
-                <div class="slider-item__content">
-                    <h4 class="slider-item__header">Saint-Petersburg State Agrarian University</h4>
-                    <div class="line line--slide-item">
-                        <span class="line-circle line-circle--slide-item"></span>
-                    </div>
-                    <p class="slider-item__info">
-                        gkdhvdvkhdk fvhscsdck jsckjs dkjcsd kjckjsd ckjsdbckjs bdkcskjdbckjs bckjs bckjskjc scndsncdv
-                        fdvfvdjhj hhhvhjvv hjvhjvh jvjhvjhvjhvjh vhjjhvjhvjhv jhvjhjhv jvjvjhvhj jhjhvjv jvjhvjhv jhvj
-                    </p>
-                    <a href="#" class="btn slider-item__btn">More Details</a>
-                </div>
-            </div>
         </div>
         <div class="container">
             <div class="slider-nav">
                 <div class="slider-line">
                     <ul class="slider-line__list js-slider-line-universities">
-                        <!-- <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li>
-                        <li class="slider-line-point"></li> -->
                     </ul>
                 </div>
                 <div class="btn-wrap">
@@ -741,8 +678,8 @@
             </div>
             <div class="universities-navigations">
                 <button class="btn btn--university">TOP UNIVERSITiES</button>
-                <button class="btn btn--university btn--posive">RUSSIA </button>
-                <button class="btn btn--university btn--posive">UKRAINE</button>
+                <button class="btn btn--university btn--posive ">RUSSIA </button>
+                <button class="btn btn--university btn--posive js-ua-universes">UKRAINE</button>
                 <button class="btn btn--university btn--posive">LEARN MORE</button>
             </div>
         </div>
